5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1888_1621.log
== TEST (2019-07-09 16:20:47) 
-- CODE:
from numpy import *

n = array(eval(input('N: ')))
q = array(eval(input('Q: ')))

total = 0 

for i in size(n):
	if n[i]=='ARROZ':
		a = 1.25*q[i]
	if n[i]=='FEIJAO':
		a = 2.60*q[i]
	if n[i]=='BIS':
		a==1.80*q[i]
	if n[i]=='MIOJO':
		a = 0.85*q[i]
	if n[i]=='FANTA':
		a = 3.20*q[i]
print(round(sum(a), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:51) 
-- CODE:
from numpy import *

n = array(eval(input('N: ')))
q = array(eval(input('Q: ')))

total = 0 

for i in size(range(n)):
	if n[i]=='ARROZ':
		a = 1.25*q[i]
	if n[i]=='FEIJAO':
		a = 2.60*q[i]
	if n[i]=='BIS':
		a==1.80*q[i]
	if n[i]=='MIOJO':
		a = 0.85*q[i]
	if n[i]=='FANTA':
		a = 3.20*q[i]
print(round(sum(a), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:22:43) 
-- CODE:
from numpy import *

n = array(eval(input('N: ')))
q = array(eval(input('Q: ')))

total = 0 

for i in size(arange(n)):
	if n[i]=='ARROZ':
		a = 1.25*q[i]
	if n[i]=='FEIJAO':
		a = 2.60*q[i]
	if n[i]=='BIS':
		a==1.80*q[i]
	if n[i]=='MIOJO':
		a = 0.85*q[i]
	if n[i]=='FANTA':
		a = 3.20*q[i]
print(round(sum(a), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:32) 
-- CODE:
from numpy import *

n = array(eval(input('N: ')))
q = array(eval(input('Q: ')))

total = 0 

for i in range(size(n)):
	if n[i]=='ARROZ':
		a = 1.25*q[i]
	if n[i]=='FEIJAO':
		a = 2.60*q[i]
	if n[i]=='BIS':
		a==1.80*q[i]
	if n[i]=='MIOJO':
		a = 0.85*q[i]
	if n[i]=='FANTA':
		a = 3.20*q[i]
print(round(sum(a), 2))
-- EXECUTION TIME:
1.20631
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1621/main.py", line 14, in <module>
    a==1.80*q[i]
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:33:41) 
-- CODE:
from numpy import *

n = array(eval(input('N: ')))
q = array(eval(input('Q: ')))

total = 0 

for i in range(size(n)):
	if n[i]=='ARROZ':
		a = 1.25*q[i]
	if n[i]=='FEIJAO':
		a = 2.60*q[i]
	if n[i]=='BIS':
		a==1.80*q[i]
	if n[i]=='MIOJO':
		a = 0.85*q[i]
	if n[i]=='FANTA':
		a = 3.20*q[i]
print(round(sum(a), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
